parser/tests/bad/call01.st
% identifier 'x' is not a subprogram

const i := 0
const j := i()
